--- a/chatbot-huong-nghiep/index.html
+++ b/chatbot-huong-nghiep/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://cdn.oaistatic.com/assets/favicon-eex17e9e.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>AI Tìm việc</title>
   </head>
   <body>
     <div id="root"></div>
